exports[`test should render active tag 1`] = `
<li>
  <a
    className="active"
    href="#"
    onClick={[Function]}
    onFocus={[Function]}
    onMouseOver={[Function]}>
    <i
      className="icon-checkbox icon-checkbox-checked" />
     
    mytag
  </a>
</li>
`;

exports[`test should render custom tag 1`] = `
<li>
  <a
    className=""
    href="#"
    onClick={[Function]}
    onFocus={[Function]}
    onMouseOver={[Function]}>
    <i
      className="icon-checkbox" />
     
    + 
    mytag
  </a>
</li>
`;

exports[`test should render selected tag 1`] = `
<li>
  <a
    className=""
    href="#"
    onClick={[Function]}
    onFocus={[Function]}
    onMouseOver={[Function]}>
    <i
      className="icon-checkbox icon-checkbox-checked" />
     
    mytag
  </a>
</li>
`;

exports[`test should render standard tag 1`] = `
<li>
  <a
    className=""
    href="#"
    onClick={[Function]}
    onFocus={[Function]}
    onMouseOver={[Function]}>
    <i
      className="icon-checkbox" />
     
    mytag
  </a>
</li>
`;
